travel-control/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: control
spec:
  selector:
    matchLabels:
      app: control
      version: v1
  replicas: 3
  template:
    metadata:
      annotations:
        readiness.status.sidecar.istio.io/applicationPorts: ""
      labels:
        app: control
        version: v1
    spec:
      containers:
        - name: control
          image: quay.io/kiali/demo_travels_control:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          securityContext:
            privileged: false
